--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "scripts": {
     "start": "rollup -c -w",
     "build": "rollup -c && npm run declaration && print-sizes ./dist",
-    "declaration": "rm -rf declaration && tsc -p tsconfig.declaration.json"
+    "declaration": "rm -rf declaration && tsc -p tsconfig.declaration.json",
+    "prerelease": "npm run build && prerelease --dirs=dist",
+    "release": "npm run build && release --dirs=dist",
+    "release:init": "npm run build && release -i --dirs=dist",
+    "deploy": "gh-pages -d ./demo --dest=./ --add --remote origin",
+    "deploy:init": "gh-pages -d ./demo --dest=./ --remote origin"
   },
   "keywords": [
     "dragscroll",
