--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scena/dragscroll",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "",
   "main": "./dist/dragscroll.cjs.js",
   "module": "./dist/dragscroll.esm.js",
@@ -33,7 +33,7 @@
   },
   "homepage": "https://github.com/daybrush/dragscroll#readme",
   "dependencies": {
-    "@egjs/component": "^2.1.2"
+    "@scena/event-emitter": "^1.0.1"
   },
   "devDependencies": {
     "@daybrush/builder": "^0.1.2",
