--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scena/dragscroll",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "",
   "main": "./dist/dragscroll.cjs.js",
   "module": "./dist/dragscroll.esm.js",
@@ -35,7 +35,7 @@
   },
   "homepage": "https://github.com/daybrush/dragscroll#readme",
   "dependencies": {
-    "@daybrush/utils": "1.6.0",
+    "@daybrush/utils": "^1.6.0",
     "@scena/event-emitter": "^1.0.2"
   },
   "devDependencies": {
